add header site

--- a/index.html
+++ b/index.html
@@ -8,14 +8,24 @@
 </head>
 
 <body>
-    <header id="site-header">Header</header>
-    <!-- /#siteheader -->
+
+    <header id="site-header">
+        <div class="nav">
+            <nav class="logo">logo</nav>
+            <nav class="link">link</nav>
+            <nav class="login">login</nav>
+        </div>
+
+
+
+    </header>
+    <!-- /#site-header -->
 
     <main id="site-main">Main</main>
-    <!-- /#sitemain -->
+    <!-- /#site-main -->
 
     <footer id="site-footer">Footer</footer>
-    <!-- /#sitefooter -->
+    <!-- /#site-footer -->
 
 
 </body>
