update header nav

--- a/index.html
+++ b/index.html
@@ -8,20 +8,24 @@
 </head>
 
 <body>
-
     <header id="site-header">
-        <div class="nav">
-            <nav class="logo">logo</nav>
-            <nav class="link">link</nav>
-            <nav class="login">login</nav>
-        </div>
-
-
+        <nav class="nav">
+            <div class="logo">logo</div>
+            <div class="link">link</div>
+            <div class="login">login</div>
+        </nav>
 
     </header>
     <!-- /#site-header -->
 
-    <main id="site-main">Main</main>
+    <main id="site-main">Main
+
+        
+
+
+
+
+    </main>
     <!-- /#site-main -->
 
     <footer id="site-footer">Footer</footer>
