add container img

--- a/index.html
+++ b/index.html
@@ -18,7 +18,15 @@
     </header>
     <!-- /#site-header -->
 
-    <main id="site-main">Main
+    <main id="site-main">
+
+        <div class="bg-img">
+            <div class="container-central">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium facilis sit labore inventore expedita repellendus dicta, aspernatur cumque exercitationem recusandae eligendi culpa nemo non quam magni quod reiciendis, mollitia reprehenderit!
+            </div>
+            <!-- /.container-central -->
+        </div>
+        <!-- /.fotoup -->
 
         
 
