add first box main

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
@@ -8,6 +9,7 @@
 </head>
 
 <body>
+
     <header id="site-header">
         <nav class="nav">
             <div class="logo">logo</div>
@@ -19,16 +21,30 @@
     <!-- /#site-header -->
 
     <main id="site-main">
-
         <div class="bg-img">
             <div class="container-central">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium facilis sit labore inventore expedita repellendus dicta, aspernatur cumque exercitationem recusandae eligendi culpa nemo non quam magni quod reiciendis, mollitia reprehenderit!
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium facilis sit labore inventore
+                expedita repellendus dicta, aspernatur cumque exercitationem recusandae eligendi culpa nemo non quam
+                magni quod reiciendis, mollitia reprehenderit!
             </div>
             <!-- /.container-central -->
         </div>
-        <!-- /.fotoup -->
+        <!-- /.foto iniziale main -->
 
-        
+        <div class="box1">
+            <div class="box1-flex">
+                <div class="box-sx">box sx</div>
+                <!-- /.box1-sx -->
+                <div class="box-dx">box dx</div>
+                <!-- /.box1-dx -->
+            </div>
+
+
+        </div>
+        <!-- /.box1 -->
+
+
+
 
 
 
@@ -41,4 +57,5 @@
 
 
 </body>
+
 </html>
