add 3 box main site

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- /#site-header -->
 
     <main id="site-main">
+
         <div class="bg-img">
             <div class="container-central">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium facilis sit labore inventore
@@ -33,7 +34,27 @@
 
         <div class="box1">
             <div class="box1-flex">
-                <div class="box-sx">box sx</div>
+                <div class="box-sx">box sx img</div>
+                <!-- /.box1-sx -->
+                <div class="box-dx">box dx</div>
+                <!-- /.box1-dx -->
+            </div>
+        </div>
+        <!-- /.box1 -->
+
+        <div class="box1">
+            <div class="box1-flex">
+                <div class="box-dx">box dx</div>
+                <!-- /.box1-dx -->
+                <div class="box-sx">box sx img</div>
+                <!-- /.box1-sx -->
+            </div>
+        </div>
+        <!-- /.box2 -->
+
+        <div class="box1">
+            <div class="box1-flex">
+                <div class="box-sx">box sx img</div>
                 <!-- /.box1-sx -->
                 <div class="box-dx">box dx</div>
                 <!-- /.box1-dx -->
@@ -42,8 +63,6 @@
 
         </div>
         <!-- /.box1 -->
-
-
 
 
 
