add img out site

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
         <div class="box1">
             <div class="box1-flex">
-                <div class="box-dx">box dx</div>
+                <div class="box-dx">box sx</div>
                 <!-- /.box1-dx -->
-                <div class="box-sx">box sx img</div>
+                <div class="box-sx">box dx img</div>
                 <!-- /.box1-sx -->
             </div>
         </div>
@@ -59,10 +59,15 @@
                 <div class="box-dx">box dx</div>
                 <!-- /.box1-dx -->
             </div>
-
-
         </div>
-        <!-- /.box1 -->
+        <!-- /.box3 -->
+
+        <div class="bg-img-out">
+            <div class="img-out-centre">
+            
+            </div>
+        </div>
+        <!-- /.img-out-centre -->
 
 
 
