update padding L R section rule css

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <header id="site-header">
+    <header id="site-header" class="plr-section">
         <nav class="nav">
             <div class="logo">logo</div>
             <div class="link">link</div>
@@ -32,7 +32,7 @@
         </div>
         <!-- /.foto iniziale main -->
 
-        <div class="box1">
+        <div class="box1 plr-section">
             <div class="box1-flex">
                 <div class="box-sx">box sx img</div>
                 <!-- /.box1-sx -->
@@ -42,7 +42,7 @@
         </div>
         <!-- /.box1 -->
 
-        <div class="box1">
+        <div class="box1 plr-section">
             <div class="box1-flex">
                 <div class="box-dx">box sx</div>
                 <!-- /.box1-dx -->
@@ -52,7 +52,7 @@
         </div>
         <!-- /.box2 -->
 
-        <div class="box1">
+        <div class="box1 plr-section">
             <div class="box1-flex">
                 <div class="box-sx">box sx img</div>
                 <!-- /.box1-sx -->
@@ -62,7 +62,7 @@
         </div>
         <!-- /.box3 -->
 
-        <div class="bg-img-out">
+        <div class="bg-img-out plr-section">
             <div class="img-out-centre">
             
             </div>
