add footer site

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header id="site-header" class="plr-section">
         <nav class="nav">
             <div class="logo">logo</div>
-            <div class="link">link</div>
+            <div class="link">link link link link link</div>
             <div class="login">login</div>
         </nav>
 
@@ -42,7 +42,7 @@
         </div>
         <!-- /.box1 -->
 
-        <div class="box1 plr-section">
+        <div class="box2 plr-section">
             <div class="box1-flex">
                 <div class="box-dx">box sx</div>
                 <!-- /.box1-dx -->
@@ -64,19 +64,33 @@
 
         <div class="bg-img-out plr-section">
             <div class="img-out-centre">
-            
+                img
             </div>
         </div>
         <!-- /.img-out-centre -->
 
-
-
-
-
     </main>
     <!-- /#site-main -->
 
-    <footer id="site-footer">Footer</footer>
+    <footer id="site-footer">
+        <nav class="nav-footer plr-section">
+            <div class="navout1">grosso il doppio</div>
+            <div class="navout2">Prodotto</div>
+            <div class="navout2">Compagnia</div>
+            <div class="navout2">Risorse</div>
+            <div class="navout2">Norme</div>
+        </nav>
+
+
+        <div class="line plr-section">
+            <div class="out">
+                <div class="logo-out">Logo</div>
+                <div class="button-out">Button</div>
+            </div>
+        </div>
+
+
+    </footer>
     <!-- /#site-footer -->
 
 
