--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 
         <div class="box1 plr-section">
             <div class="box1-flex">
-                <div class="box-sx">box sx img</div>
+                <div class="box-img">box sx img</div>
                 <!-- /.box1-sx -->
-                <div class="box-dx">box dx</div>
+                <div class="box-text">box dx</div>
                 <!-- /.box1-dx -->
             </div>
         </div>
@@ -44,9 +44,9 @@
 
         <div class="box2 plr-section">
             <div class="box1-flex">
-                <div class="box-dx">box sx</div>
+                <div class="box-text">box sx</div>
                 <!-- /.box1-dx -->
-                <div class="box-sx">box dx img</div>
+                <div class="box-img">box dx img</div>
                 <!-- /.box1-sx -->
             </div>
         </div>
@@ -54,9 +54,9 @@
 
         <div class="box1 plr-section">
             <div class="box1-flex">
-                <div class="box-sx">box sx img</div>
+                <div class="box-img">box sx img</div>
                 <!-- /.box1-sx -->
-                <div class="box-dx">box dx</div>
+                <div class="box-text">box dx</div>
                 <!-- /.box1-dx -->
             </div>
         </div>
@@ -74,11 +74,11 @@
 
     <footer id="site-footer">
         <nav class="nav-footer plr-section">
-            <div class="navout1">grosso il doppio</div>
-            <div class="navout2">Prodotto</div>
-            <div class="navout2">Compagnia</div>
-            <div class="navout2">Risorse</div>
-            <div class="navout2">Norme</div>
+            <div class="link-footer1">grosso il doppio</div>
+            <div class="link-footer2">Prodotto</div>
+            <div class="link-footer2">Compagnia</div>
+            <div class="link-footer2">Risorse</div>
+            <div class="link-footer2">Norme</div>
         </nav>
 
 
